--- a/TI_MyA_PabloAguilar/TI_MyA_PabloAguilar/TI_MyA_PabloAguilar.vcxproj.filters
+++ b/TI_MyA_PabloAguilar/TI_MyA_PabloAguilar/TI_MyA_PabloAguilar.vcxproj.filters
@@ -24,5 +24,16 @@
     <ClCompile Include="Personaje.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="global.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="global.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemigo.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
